samples/_failures_safe/1761071260_3a2666_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f721046b.c: In function ‘pointcloud_add_point’:
./samples/SAFE/__tmp_f721046b.c:147:9: error: expected declaration or statement at end of input
  147 |         }
      |         ^
./samples/SAFE/__tmp_f721046b.c:147:9: error: expected declaration or statement at end of input
